Fix news title spacing

--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -76,6 +76,7 @@
 .flexCol--news-info-column {
     background-color: transparent;
     display: grid;
+    padding-right: 2.5rem;
 }
 
 .flexCol--news-block {
